--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,31 +1,26 @@
-// bower:scss
-// endbower
-
 body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
+  margin: 0;
+  padding: 0;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+.button {
+  background-color: #f06;
+  border-radius: 4px;
+  display: block;
+  height: 100px;
+  width: 100px;
 }
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+.prev {
+  left: 0;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.next {
+  right: 0;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
 }
