--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,23 +4,43 @@ body {
 }
 
 .button {
-  background-color: #f06;
+  align-items: center;
+  background-color: #FF604B;
   border-radius: 4px;
-  display: block;
+  color: #fff;
+  display: flex;
+  font-size: 4em;
   height: 100px;
+  justify-content: center;
+  position: fixed;
+  text-decoration: none;
+  top: 50%;
+  transform: translate(0, -50%);
   width: 100px;
+
+  @media (max-width: 768px) {
+    bottom: -50px;
+    top: auto;
+    width: 50%;
+  }
 }
 
 .prev {
   left: 0;
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+
+  &:before {
+    margin-top: 7px;
+    margin-left: -8px;
+  }
 }
 
 .next {
   right: 0;
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+
+  &:before {
+    margin-top: 7px;
+    margin-left: 8px;
+  }
 }
+
+.title
