--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,14 @@
 body {
+  background-color: #26292C;
   margin: 0;
   font-family: 'Roboto Condensed', sans-serif;
   padding: 0;
 }
 
 .content {
+  perspective: 800px;
+  perspective-origin: 50% 0;
+
   img {
     width: 100%;
   }
@@ -16,14 +20,14 @@ body {
   border-radius: 4px;
   color: #fff;
   display: flex;
-  font-size: 4em;
-  height: 100px;
+  font-size: 2em;
+  height: 60px;
   justify-content: center;
   position: fixed;
   text-decoration: none;
   top: 50%;
   transform: translate(0, -50%);
-  width: 100px;
+  width: 60px;
 
   @media (max-width: 768px) {
     bottom: -50px;
@@ -32,20 +36,51 @@ body {
   }
 }
 
-.prev {
-  left: 0;
+.button--previous {
+  left: 20px;
 
   &:before {
     margin-top: 7px;
     margin-left: -8px;
   }
+
+  @media (max-width: 768px) {
+    left: 0;
+  }
 }
 
-.next {
-  right: 0;
+.button--next {
+  right: 20px;
 
   &:before {
     margin-top: 7px;
     margin-left: 8px;
+  }
+
+  @media (max-width: 768px) {
+    right: 0;
+  }
+}
+
+.current {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  .loader {
+    background-color: rgba(255, 255, 255, 0.4);
+    height: 100%;
+    min-height: 100%;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
   }
 }
