--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,8 +40,8 @@ body {
   left: 20px;
 
   &:before {
-    margin-top: 7px;
-    margin-left: -8px;
+    margin-top: 5px;
+    margin-left: -5px;
   }
 
   @media (max-width: 768px) {
@@ -53,8 +53,8 @@ body {
   right: 20px;
 
   &:before {
-    margin-top: 7px;
-    margin-left: 8px;
+    margin-top: 5px;
+    margin-left: 5px;
   }
 
   @media (max-width: 768px) {
@@ -82,5 +82,55 @@ body {
       opacity: 1;
       visibility: visible;
     }
+  }
+}
+
+.imageTitle {
+  background-color: #FF604B;
+  border-radius: 4px;
+  color: #fff;
+  left: 50%;
+  padding: 10px;
+  position: absolute;
+  top: 20px;
+  transform: translateX(-50%);
+}
+
+.throbber {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  &.active {
+    &:after {
+      animation: rotate 0.6s linear infinite;
+    }
+  }
+
+  &:after {
+    transition: transform 0.4s ease;
+    animation: none;
+    border-radius: 100%;
+    border-bottom: 14px solid #26292C;
+    border-left: 14px solid #FF604B;
+    border-top: 14px solid #FF604B;
+    border-right: 14px solid #26292C;
+    content: '';
+    opacity: 1;
+    display: block;
+    height: 40px;
+    position: relative;
+    width: 40px;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateZ(-360deg);
+  }
+  100% {
+    transform: rotateZ(0);
   }
 }
