--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,11 @@ body {
 }
 
 .content {
+  height: 100%;
+  min-height: 100%;
+  position: absolute;
+  width: 100%;
+
   img {
     width: 100%;
   }
@@ -25,6 +30,7 @@ body {
   top: 50%;
   transform: translate(0, -50%);
   width: 60px;
+  z-index: 20;
 
   @media (max-width: 768px) {
     bottom: -50px;
@@ -59,24 +65,34 @@ body {
   }
 }
 
-.current {
+.image {
   width: 100%;
 
   .loader {
     background-color: rgba(255, 255, 255, 0.4);
     height: 100%;
     min-height: 100%;
+    left: 0;
     opacity: 0;
     position: absolute;
+    top: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
     width: 100%;
     visibility: hidden;
-    transition: opacity 0.5s ease, visibility 0.5s ease;
+    z-index: 10;
 
     &.active {
       opacity: 1;
       visibility: visible;
     }
   }
+}
+
+.image__container {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .image__title {
