--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,10 +9,11 @@ body {
   height: 100%;
   min-height: 100%;
   position: absolute;
+  overflow: hidden;
   width: 100%;
 
   img {
-    width: 100%;
+    // width: 100%;
   }
 }
 
@@ -33,7 +34,8 @@ body {
   z-index: 20;
 
   @media (max-width: 768px) {
-    bottom: -50px;
+    bottom: -30px;
+    border-radius: 0;
     top: auto;
     width: 50%;
   }
@@ -102,6 +104,7 @@ body {
   left: 50%;
   padding: 10px;
   position: absolute;
+  text-align: center;
   top: 20px;
   transform: translateX(-50%);
 }
