--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,6 +34,10 @@ body {
   width: 60px;
   z-index: 20;
 
+  &:hover {
+    background-color: #FFA599;
+  }
+
   @media (max-width: 768px) {
     bottom: -30px;
     border-radius: 0;
